--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.2.0",
     "lodash": "^3.10.1",
-    "react": "^0.13.3",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
+    "react-slick": "^0.9.2",
     "run-sequence": "^1.1.2",
     "serve-static": "^1.12.3",
+    "slick-carousel": "^1.6.0",
     "vinyl-source-stream": "^1.1.0"
   }
 }
