--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "serve-static": "^1.12.3",
     "slick-carousel": "^1.6.0",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "alt": "^0.18.6",
+    "alt-container": "^1.0.2"
   }
 }
