--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "gulp": "^3.9.0",
     "gulp-less": "^3.3.0",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.2.0",
+    "gulp-uglify": "^1.5.4",
     "lodash": "^3.10.1",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
@@ -27,6 +27,7 @@
     "run-sequence": "^1.1.2",
     "serve-static": "^1.12.3",
     "slick-carousel": "^1.6.0",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
