--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "alt": "^0.18.6",
-    "alt-container": "^1.0.2"
+    "alt-container": "^1.0.2",
+    "vinyl-buffer": "^1.0.0"
   }
 }
