--- a/package.json
+++ b/package.json
@@ -10,22 +10,21 @@
   "license": "ISC",
   "devDependencies": {
     "babelify": "^6.1.3",
-    "browser-sync": "^2.18.12",
     "browserify": "^11.0.1",
-    "connect": "^3.6.2",
     "events": "^1.0.2",
     "flux": "^2.0.3",
     "gulp": "^3.9.0",
+    "gulp-connect": "^5.0.0",
     "gulp-less": "^3.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.4",
+    "http-proxy-middleware": "^0.17.4",
     "lodash": "^3.10.1",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-router": "^2.*",
     "react-slick": "^0.9.2",
     "run-sequence": "^1.1.2",
-    "serve-static": "^1.12.3",
     "slick-carousel": "^1.6.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
