--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   "dependencies": {
     "alt": "^0.18.6",
     "alt-container": "^1.0.2",
+    "axios": "^0.16.2",
+    "querystring": "^0.2.0",
     "vinyl-buffer": "^1.0.0"
   }
 }
