--- a/package.json
+++ b/package.json
@@ -33,7 +33,11 @@
     "alt": "^0.18.6",
     "alt-container": "^1.0.2",
     "axios": "^0.16.2",
+    "connect-history-api-fallback": "^1.3.0",
+    "g": "^2.0.1",
+    "history": "^4.7.2",
     "querystring": "^0.2.0",
+    "urijs": "^1.18.12",
     "vinyl-buffer": "^1.0.0"
   }
 }
